Switch to using URI internally when dealing with Protocols - inputs and outputs to the process remain named URL to match Maven and DSL properties.